--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-body{
-  background-color:green;
+
+body {
+  background-color: blue;
 }
