--- a/src/n.css
+++ b/src/n.css
@@ -10,21 +10,34 @@ body{
 @media only screen and (max-width: 7px) {
     /* For mobile phones: */
     [class*="col-"] {
-      width: 250px;
+      width: 100%;
+      position: relative;
+
     }
   }
   @media screen and (max-width: 700px) {
       [class*="col-3"]{
         width: 700px;
+        position: relative;
+
 
       }
+      @media only screen  and(min-width:768px) and(max-width:990px){
+        #product{
+          width:100%;
+          height: 300px;
+          position: relative;
+        }
+      }
+
   }
   #product{
       background-color: #eeeeee;
-      box-shadow: 4px 4px 10px 0 rgba(0, 0 ,2,0.3);
+      box-shadow: 6px 6px 15px 0 rgba(0, 0 ,2,0.3);
       text-align: center;
       margin:0 auto;
-      display: flex;
+      /* color:rgb(155, 68, 68) */
+      /* display: flex; */
       
   }
   #detail{
@@ -37,7 +50,11 @@ body{
         src: url();
       
       }
-
+.timer{
+  color:gray;
+  font-size: 15px;
+  font-weight: bold;
+}
   
   #sabadkharid{
     border:"1px";height:"auto";border-radius: 8px;
@@ -144,4 +161,13 @@ font-family:cursive;
   }
   #pic1:hover{
     width:auto
+    
+  }
+  #pic1{
+    z-index: 3;
+    box-sizing: inherit;
+    outline: none !important;
+    outline-color: currentcolor;
+    outline-style: none;
+    outline-width: medium;
   }
