--- a/src/n.css
+++ b/src/n.css
@@ -2,6 +2,8 @@
 /* @import url(Fonts/A-Iranian-Sans/Iranian\ Sans.ttf); */
 body{
     background-color: #f6f6f6
+    /* background-color: #e2e2e2; */
+
 }
 /* @font-face {
   font-family: 'iransance';
@@ -31,6 +33,118 @@ body{
       }
 
   }
+  #box{
+    background-Color:#e2e2e2; 
+      /* width:300px;
+     height:150px; */
+     margin-left: 360px; 
+     /* margin-top: 8px; */
+     border-radius: 24px; 
+     box-shadow: 8px 8px 16px #c4c4cc,
+     -8px -8px 16px  #f2f2f2;
+     width:320px;
+  height:455px;
+  justify-content: center;
+  position: relative;
+ /* margin:100px; */
+ }
+ #box img{
+ border-radius: 90px;
+ box-shadow: 8px 8px 16px #c4c4cc,
+ -8px -8px 16px  #f2f2f2;
+ margin-left: 100px; 
+ margin-top: 10px;
+ }
+ #box h4{
+   text-align:center;
+   font-family: sans-serif;
+   text-transform: capitalize;
+   margin-right: 10px;
+   letter-spacing: 1px;
+   color: #555;
+   font-size: 15px;
+   content: bold;
+ }
+ #fields input{
+   width: 90%;
+   height: 40px;
+   padding-left: 10px;
+   border-radius: 25px;
+   margin-bottom: 20px;
+   border: none;
+   background: none;
+   outline: none;
+   font-family: sans-serif;
+   box-shadow: inset 5px 5px 7px #c4c4cc,
+   -5px -5px 7px #f2f2f2;
+   letter-spacing: 1px;
+ align-items: center;
+   text-align: right;
+   margin-left: 10px;
+ font-size: 15px;
+ text-indent: 10px;
+ padding: 5px;
+ }
+ #btn-login{
+   width: 97%;
+   height: 40px;
+   border-radius: 35px;
+   border: none;
+   /* margin: 40px 20px; */
+   /* box-shadow: inset 8px 8px 16px #c4c4cc,
+ -8px -8px 16px  #f2f2f2; */
+ background-color:#6ab3f6;
+ align-items: center;
+ padding-left: 2px;
+ margin-left: 5px;
+ font-weight: bold;
+ font-size: 15px;
+ color: #555;
+ outline: none;
+ 
+ }
+
+ #fields label{
+   transition: all 0.3s;
+   position: absolute;
+   top:"10px";  
+   right:30px;
+   /* margin-top: 20px; */
+   width: 120px;
+   padding-left: 10px;
+   text-align: right;
+   color: #555;
+ font-family: sans-serif;
+ }
+ #eye{
+  transition: all 0.3s;
+  position: absolute;
+  /* top:"10px"; */
+  right:210px;
+  margin-top: 20px;
+  width: 120px;
+  padding-left: 10px;
+  text-align: right;
+  color: #555;
+font-family: sans-serif;
+cursor: pointer;
+ }
+ #fields input:not(:placeholder-shown)+label,#fields input:focus+label{
+  margin-top: -13px;
+   color: #000000aa;
+   background-color: #e2e2e2;
+   width: 80px;
+ border-radius: 30px;
+ align-items: center;
+ text-align: center;
+ }
+  #Link:hover #span{
+    bottom: 50px;
+    visibility: visible;
+    opacity: 1;
+   }
+  
+ 
   #sabt{
 text-shadow: red;
 margin-top: 60px; 
@@ -161,6 +275,13 @@ transition: 0.4s all;
       ul {
           flex-direction:column;
       }
+      @keyframes App-logo-spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }}
   }
   #title{
     animation: mymove 5s infinite;
