--- a/src/n.css
+++ b/src/n.css
@@ -1,42 +1,46 @@
-
 /* @import url(Fonts/A-Iranian-Sans/Iranian\ Sans.ttf); */
-body{
-    background-color: #f6f6f6
-    /* background-color: #e2e2e2; */
-
+body {
+  background-color: #f6f6f6;
+  /* background-color: #e2e2e2; */
 }
-/* @font-face {
-  font-family: 'iransance';
-  src: url(/Fonts/A-Iranian-Sans/Iranian\ Sans.ttf)format(ttf);
-} */
-@media only screen and (max-width: 300px) {
-    /* For mobile phones: */
-    [class*="card mt-5"] {
-      width: 300px;
-      position: relative;
 
+@media only screen and (max-width: 300px) {
+  /* For mobile phones: */
+  /* [class*="card mt-3"] { */
+  /* width: 800px; */
+  /* position: relative; */
+
+  /* } */
+}
+/* @media only screen and (max-width: 600px) {
+  #off {
+   width: 400px;
+   background-color: lawngreen;
     }
+  } */
+@media screen and (max-width: 700px) {
+  [class*="col-3"] {
+    width: 300px;
+    position: relative;
   }
-  @media screen and (max-width: 700px) {
-      [class*="col-3"]{
-        width: 700px;
-        position: relative;
-      }
-      [class*="col-5"]{
-        width: 600px;
-     display: inline-block;
-        /* position: relative; */
-        
-      }
-      #backdetail{
-        display: grid;
-        width: 400px;
-      }
-      #navz{
-        width: 100px;
-        display: flex;
-      }
-      /* @media only screen  and(min-width:768px) and(max-width:990px){
+  [class*="col-4"] {
+    width: 60px;
+    display: flex;
+    position: relative;
+  }
+  #product {
+    display: grid;
+    width: 20px;
+  }
+  #backdetail {
+    display: grid;
+    width: 400px;
+  }
+  #navz {
+    width: 100px;
+    display: flex;
+  }
+  /* @media only screen  and(min-width:768px) and(max-width:990px){
         #product{
           width:100%;
           height: 300px;
@@ -49,164 +53,163 @@ body{
          
         }
       } */
-
-  } 
-  #box{
-    background-Color:#e2e2e2; 
-      /* width:300px;
+}
+#box {
+  background-color: #e2e2e2;
+  /* width:300px;
      height:150px; */
-     margin-left: 360px; 
-     /* margin-top: 8px; */
-     border-radius: 24px; 
-     box-shadow: 8px 8px 16px #c4c4cc,
-     -8px -8px 16px  #f2f2f2;
-     width:320px;
-  height:455px;
+  /* margin-left: 360px; */
+  /* margin-top: 8px; */
+  border-radius: 24px;
+  box-shadow: 8px 8px 16px #c4c4cc, -8px -8px 16px #f2f2f2;
+  width: 320px;
+  height: 455px;
   justify-content: center;
   position: relative;
- /* margin:100px; */
- }
- #box img{
- border-radius: 90px;
- box-shadow: 8px 8px 16px #c4c4cc,
- -8px -8px 16px  #f2f2f2;
- margin-left: 100px; 
- margin-top: 10px;
- }
- #box h4{
-   text-align:center;
-   font-family: sans-serif;
-   text-transform: capitalize;
-   margin-right: 10px;
-   letter-spacing: 1px;
-   color: #555;
-   font-size: 15px;
-   content: bold;
- }
- #fields input{
-   width: 90%;
-   height: 40px;
-   padding-left: 10px;
-   border-radius: 25px;
-   margin-bottom: 20px;
-   border: none;
-   background: none;
-   outline: none;
-   font-family: sans-serif;
-   box-shadow: inset 5px 5px 7px #c4c4cc,
-   -5px -5px 7px #f2f2f2;
-   letter-spacing: 1px;
- align-items: center;
-   text-align: right;
-   margin-left: 10px;
- font-size: 15px;
- text-indent: 10px;
- padding: 5px;
- }
- #btn-login{
-   width: 97%;
-   height: 40px;
-   border-radius: 35px;
-   border: none;
-   /* margin: 40px 20px; */
-   /* box-shadow: inset 8px 8px 16px #c4c4cc,
+  /* margin:100px; */
+align-items: center;
+margin: auto;
+padding: 10px;
+}
+#box img {
+  border-radius: 90px;
+  box-shadow: 8px 8px 16px #c4c4cc, -8px -8px 16px #f2f2f2;
+  margin-left: 100px;
+  margin-top: 10px;
+}
+#box h4 {
+  text-align: center;
+  font-family: sans-serif;
+  text-transform: capitalize;
+  margin-right: 10px;
+  letter-spacing: 1px;
+  color: #555;
+  font-size: 15px;
+  content: bold;
+}
+#fields input {
+  width: 90%;
+  height: 40px;
+  padding-left: 10px;
+  border-radius: 25px;
+  margin-bottom: 20px;
+  border: none;
+  background: none;
+  outline: none;
+  font-family: sans-serif;
+  box-shadow: inset 5px 5px 7px #c4c4cc, -5px -5px 7px #f2f2f2;
+  letter-spacing: 1px;
+  align-items: center;
+  text-align: right;
+  margin-left: 10px;
+  font-size: 15px;
+  text-indent: 10px;
+  padding: 5px;
+}
+#btn-login {
+  width: 97%;
+  height: 40px;
+  border-radius: 35px;
+  border: none;
+  /* margin: 40px 20px; */
+  /* box-shadow: inset 8px 8px 16px #c4c4cc,
  -8px -8px 16px  #f2f2f2; */
- background-color:#6ab3f6;
- align-items: center;
- padding-left: 2px;
- margin-left: 5px;
- font-weight: bold;
- font-size: 15px;
- color: #555;
- outline: none;
- 
- }
- @font-face {
+  background-color: #6ab3f6;
+  align-items: center;
+  padding-left: 2px;
+  margin-left: 5px;
+  font-weight: bold;
+  font-size: 15px;
+  color: #555;
+  outline: none;
+}
+@font-face {
   font-family: iranian;
   src: url("./Fonts/A-Iranian-Sans/Iranian\ Sans.ttf");
 }
 
- #fields label{
-   transition: all 0.3s;
-   position: absolute;
-   top:"10px";  
-   right:30px;
-   /* margin-top: 20px; */
-   width: 120px;
-   padding-left: 10px;
-   text-align: right;
-   color: #555;
- font-family: sans-serif;
- }
- #eye{
+#fields label {
+  transition: all 0.3s;
+  position: absolute;
+  top: "10px";
+  right: 30px;
+  /* margin-top: 20px; */
+  width: 120px;
+  padding-left: 10px;
+  text-align: right;
+  color: #555;
+  font-family: sans-serif;
+}
+#eye {
   transition: all 0.3s;
   position: absolute;
   /* top:"10px"; */
-  right:210px;
+  right: 210px;
   margin-top: 20px;
   width: 120px;
   padding-left: 10px;
   text-align: right;
   color: #555;
-font-family: sans-serif;
-cursor: pointer;
- }
- #fields input:not(:placeholder-shown)+label,#fields input:focus+label{
+  font-family: sans-serif;
+  cursor: pointer;
+}
+#fields input:not(:placeholder-shown) + label,
+#fields input:focus + label {
   margin-top: -13px;
-   color: #000000aa;
-   background-color: #e2e2e2;
-   width: 80px;
- border-radius: 30px;
- align-items: center;
- text-align: center;
- }
-  #Link:hover #span{
-    bottom: 50px;
-    visibility: visible;
-    opacity: 1;
-   }
-  #btn-sabtname{
-    width: 97%;
-   height: 40px;
-   border-radius: 35px;
-   border: none;
-   /* margin: 40px 20px; */
-   /* box-shadow: inset 8px 8px 16px #c4c4cc,
+  color: #000000aa;
+  background-color: #e2e2e2;
+  width: 80px;
+  border-radius: 30px;
+  align-items: center;
+  text-align: center;
+}
+#Link:hover #span {
+  bottom: 50px;
+  visibility: visible;
+  opacity: 1;
+}
+#btn-sabtname {
+  width: 97%;
+  height: 40px;
+  border-radius: 35px;
+  border: none;
+  /* margin: 40px 20px; */
+  /* box-shadow: inset 8px 8px 16px #c4c4cc,
  -8px -8px 16px  #f2f2f2; */
- background-color:#6ab3f6;
- align-items: center;
- /* padding-left: 2px;
+  background-color: #6ab3f6;
+  align-items: center;
+  /* padding-left: 2px;
  margin-left: 5px; */
- font-weight: bold;
- font-size: 15px;
- color: #555;
- outline: none;
- margin-left: 90px;
- font-family: sans-serif;
-  }
-  #sabtname{
-background-Color:#e2e2e2; 
-/* width:300px;
+  font-weight: bold;
+  font-size: 15px;
+  color: #555;
+  outline: none;
+  margin-left: 90px;
+  font-family: sans-serif;
+}
+#sabtname {
+  background-color: #e2e2e2;
+  /* width:300px;
 height:150px; */
-margin-left: 360px; 
-/* margin-top: 8px; */
-border-radius: 24px; 
-box-shadow: 8px 8px 16px #c4c4cc,
--8px -8px 16px  #f2f2f2;
-width:320px;
-height:540px;
-justify-content: center;
-position: relative;
-  } 
+  /* margin-top: 8px; */
+  border-radius: 24px;
+  box-shadow: 8px 8px 16px #c4c4cc, -8px -8px 16px #f2f2f2;
+  width: 350px;
+  height: 540px;
+  justify-content: center;
+  position: relative;
+  margin: auto;
+  padding: 10px;
+}
 
- #in{
-   /* border-radius: 4px;
+#in {
+  /* border-radius: 4px;
    width: 300px;
  text-align: center;
   margin-left: 170px; 
   border: none; */
   margin-top: 10px;
-height: 20px;;
+  height: 20px;
   width: 90%;
   height: 30px;
   padding-left: 10px;
@@ -216,168 +219,164 @@ height: 20px;;
   background: none;
   outline: none;
   font-family: sans-serif;
-  box-shadow: inset 5px 5px 7px #c4c4cc,
-  -5px -5px 7px #f2f2f2;
+  box-shadow: inset 5px 5px 7px #c4c4cc, -5px -5px 7px #f2f2f2;
   letter-spacing: 1px;
-align-items: center;
+  align-items: center;
   text-align: right;
   margin-left: 10px;
-font-size: 15px;
-text-indent: 10px;
-padding: 5px;
-   }
+  font-size: 15px;
+  text-indent: 10px;
+  padding: 5px;
+}
 
-  #product{
-      background-color: #eeeeee;
-      box-shadow: 6px 6px 15px 0 rgba(0, 0 ,2,0.3);
-      text-align: center;
-      margin:0 auto;
-      /* color:rgb(155, 68, 68) */
-      /* display: flex; */
-      
-  }
-  #detail{
-      display:flex;
-      border:tan;
-      height: 400px;
-      border-radius: 3px;
-      /* @font-face {
-        /* font-family: iransance; */
-        src: url();
-      
-      }
-.timer{
-  color:gray;
+#product {
+  background-color: #eeeeee;
+  box-shadow: 6px 6px 15px 0 rgba(0, 0, 2, 0.3);
+  text-align: center;
+  margin: 0 auto;
+  /* color:rgb(155, 68, 68) */
+  /* display: flex; */
+}
+#detail {
+  display: flex;
+  border: tan;
+  height: 400px;
+  border-radius: 3px;
+}
+.timer {
+  color: gray;
   font-size: 15px;
   font-weight: bold;
+  width: 5px;
 }
-  
-  #sabadkharid{
-    border:"1px";height:"auto";border-radius: 8px;
+
+#sabadkharid {
+  border: "1px";
+  height: "auto";
+  border-radius: 8px;
+  display: grid;
+  /* font-family:fantasy; */
+  text-align: right;
+  box-shadow: whitesmoke;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  background-color: #eeeeee;
+  width: 302px;
+  margin: 3px;
+  height: 404px;
+}
+#picdetail {
+  direction: rtl;
+  font-size: 20px;
+  width:270px;
+  font-family:  sans-serif;
+  /* width: 500px; */
+  text-align: right;
+  margin-bottom: auto;
+  background-color: #eeeeee;
+  height: 400px;
+  border-radius: 10px;
+  margin: 10px;
+  box-shadow: 4px 4px 10px 0 rgba(213, 212, 239, 0.7);
+
+
+}
+
+#navbar {
+  background-color: #eeeeee;
+  box-shadow: 4px 4px 10px 0 rgba(211, 211, 229, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: hsl(180, 3%, 88%);
+  overflow: hidden;
+  border-radius: 15px;
+}
+nav ul {
+  display: flex;
+  text-align: center;
+}
+nav ul li {
+  cursor: pointer;
+  padding: 0 10px;
+  transition: all 0.45s ease;
+}
+nav ul li a span {
+  position: absolute;
+  letter-spacing: 0.5px;
+  transform: translateX(-70px);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.45s ease;
+  font-size: 12px;
+}
+nav ul li:hover {
+  background: rgb(206, 186, 186);
+}
+nav ul li a :hover {
+  color: #fff;
+  border-radius: "30px";
+}
+nav ul li:hover a span {
+  transform: translateX(-55px);
+  opacity: 1;
+  pointer-events: visible;
+}
+nav ul li:hover a i {
+  transform: translateX(-25px);
+}
+nav ul li a i {
+  font-size: 20px;
+  margin: 0 38 px;
+  transition: 0.4s all;
+}
+@media only screen and(max-width:600px) {
+  ul {
+    flex-direction: column;
+  }
+  #product {
+    width: 50px;
+    height: "100px";
+  }
+  #navz {
     display: grid;
-    /* font-family:fantasy; */
-    text-align: right;
-    box-shadow: whitesmoke;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-     background-color: #eeeeee;
- width: 302px;
- margin: 3PX;
- height:404px;
-
-
-  }
-  #picdetail{
-    direction: rtl;
-    font-size: 20px ;
-    width: auto;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;;
-    /* width: 500px; */
-    text-align: right;
-    margin-bottom: auto;
-     background-color: #eeeeee;
-     height:400px;
-     border-radius: 10px;
-     margin: 10px;
-
   }
 
-  #navbar{
-    background-color: #eeeeee;
-    box-shadow: 4px 4px 10px 0 rgba(211, 211, 229, 0.3);
-display: flex;
-align-items: center;
-justify-content: center;
-background: hsl(180, 3%, 88%);
-overflow: hidden;
-border-radius: 15px; 
-    }  nav ul{
-      display: flex;
-      text-align: center;
-  }
-  nav ul li{
-      cursor: pointer;
-      padding:  0 10px;
-      transition: all 0.45s ease;
-  }
-  nav ul li a span {
-      position: absolute;
-      letter-spacing: 0.5px;
-      transform: translateX(-70px);
-      opacity: 0;
-      pointer-events: none;
-      transition: all .45s ease;
-      font-size: 12px;
-  }
-  nav ul li:hover{
-      background: rgb(206, 186, 186);
-  }
-  nav ul li a :hover{
-      color: #fff;
-      border-radius: "30px";
-  }
-  nav ul li:hover a span {
-      transform: translateX(-55px);
-      opacity: 1;
-      pointer-events: visible;
-  }
-  nav ul li:hover a i{
-     
-      transform: translateX(-25px);
-  }
-  nav ul li a i{
- font-size: 20px; 
-margin: 0 38 px;
-transition: 0.4s all;
-  }
-  @media only screen and(max-width:600px){
-      ul {
-        flex-direction:column;
-      }
-      #product{
-        width: 50px; height: "100px"
-      }
-      #navz{
-        display: grid;
-      }
-
-      /* @keyframes App-logo-spin {
+  /* @keyframes App-logo-spin {
         from {
           transform: rotate(0deg);
         }
         to {
           transform: rotate(360deg);
         }} */
-  }
-  #title{
-    animation: mymove 5s infinite;
-      font-family:cursive;
-      /* text-shadow: 1px 1px 2px rgb(46, 39, 40); */
-      color: green;
-      font-weight:bold
-  }
-  .star{
-    cursor: pointer;
-    transition: color 200ms;
-  }
-  input[type="radio"]{
-    display: none;
-  }
-  #comment{
-width: 1200px;
-/* display: inline; */
-direction: rtl;
-font-family:cursive; 
-    
-  }
-  #pic1:hover{
-    width:auto
-    
-  }
-  #pic1{
-    z-index: 3;
-    box-sizing: inherit;
-    outline: none !important;
-    outline-color: currentcolor;
-    outline-style: none;
-    outline-width: medium;
-  }
+}
+#title {
+  animation: mymove 5s infinite;
+  font-family: cursive;
+  /* text-shadow: 1px 1px 2px rgb(46, 39, 40); */
+  color: green;
+  font-weight: bold;
+}
+.star {
+  cursor: pointer;
+  transition: color 200ms;
+}
+input[type="radio"] {
+  display: none;
+}
+#comment {
+  width: 400px;
+  text-align: right;
+  font-family:sans-serif;
+/* margin-left: 200px; */
+}
+#pic1:hover {
+  width: auto;
+}
+#pic1 {
+  z-index: 3;
+  box-sizing: inherit;
+  outline: none !important;
+  outline-color: currentcolor;
+  outline-style: none;
+  outline-width: medium;
+}
