--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,92 @@
 body {
     background-color: aquamarine;
 }
+.navresponse{
+    padding: 0px;
+    margin: 0px;
+    width: 00px;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+.nav2{
+    background: hsl(214, 10%, 86%);
+    height: 80px;
+    width: 100%;
+}
+label.logo{
+    color: rgb(41, 40, 40);
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+a.activ,a:hover{
+    background: #262727;
+    transition: .5s;
+}
+.checkbtn{
+    font-size: 30px;
+    color: rgb(15, 15, 15);
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+@media (max-width:952px){
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a{
+
+        font-size: 16px;
+    }
+
+}
+@media (max-width:858px){
+   .checkbtn{
+       display: block;
+   }
+
+ul{
+    position:fixed;
+    width: 80%;
+    color: rgb(14, 14, 14);
+    height: 100px;
+    background: hsl(214, 10%, 86%); 
+    top: 10px;
+    left:-90%;
+    margin-top: auto;
+    /* bottom:600px; */
+    text-align: center;
+    transition: all .5s;
+}
+nav ul li{
+    display:flex;
+    margin: 50px 0;
+    line-height: 30px;
+bottom:600px;}
+a:hoverr,a.active{
+    background: none;
+    color :#0082e6;
+}
+}
+#check:checked~ul{
+left: 0;;
+}
