--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,16 @@ body {
     background-color: aquamarine;
 }
 .navresponse{
+    font-family:sans-serif;
     padding: 0px;
     margin: 0px;
-    width: 00px;
+    /* width: 1500px; */
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
 }
 .nav2{
-    background: hsl(214, 10%, 86%);
+    /* background: hsl(214, 10%, 86%); */
     height: 80px;
     width: 100%;
 }
@@ -64,14 +65,30 @@ a.activ,a:hover{
        display: block;
    }
 
+   #imgpro{
+       width: 130px;
+       margin: 0px;
+       height: 50px;
+   }
+   #styleservic{
+       width: 200px;
+       border-radius: 3px;
+   }
+   #imghome{
+       width: 250px;
+       height:auto;
+   }
+#spanhome{
+font-weight: 10px;
+}
 ul{
     position:fixed;
-    width: 80%;
+    width: 50%;
     color: rgb(14, 14, 14);
     height: 100px;
     background: hsl(214, 10%, 86%); 
     top: 10px;
-    left:-90%;
+    left:-60%;
     margin-top: auto;
     /* bottom:600px; */
     text-align: center;
@@ -79,14 +96,42 @@ ul{
 }
 nav ul li{
     display:flex;
-    margin: 50px 0;
+    /* margin: 50px 0; */
     line-height: 30px;
 bottom:600px;}
 a:hoverr,a.active{
     background: none;
-    color :#0082e6;
+    color :#b9bbbd;
 }
+#buttonhome{
+    margin-right: -40px;
+    width:160px;
+}
+
 }
 #check:checked~ul{
 left: 0;;
 }
+#home{
+   
+     margin-top:6%; 
+width:1230px;
+background-color: rgb(53, 52, 52);
+ }
+#homestyle{
+    
+display: flex;
+}
+#imghome{
+    margin-left: -14px;
+}
+#buttonhome{
+    margin-top: 100px;
+    margin-right:100px;
+    border-radius: 1%;
+    background-color: #b9bbbd;
+}
+#buttonhome:hover{
+    transition:all 2s, color 1s;
+    background: hsl(66, 61%, 73%); 
+   }
