--- a/src/n.css
+++ b/src/n.css
@@ -1,4 +1,10 @@
-/* @import url(Fonts/A-Iranian-Sans/Iranian\ Sans.ttf); */
+@font-face {
+  font-family: IranSans;
+  src: url("Component/Fonts/A-Iranian-Sans/Iranian\ Sans.ttf");
+  
+};
+
+
 body {
   /* background-color: #f6f6f6; */
     background-color: #7a7b7c;
@@ -6,20 +12,7 @@ body {
   /* background-color: #e2e2e2; */
 }
 
-/* @media only screen and (max-width: 300px) {
-  For mobile phones 
-   [class*="card mt-3"] {
-   width: 800px; 
-   position: relative; 
 
-   }
-} */
-/* @media only screen and (max-width: 600px) {
-  #off {
-   width: 400px;
-   background-color: lawngreen;
-    }
-  } */
 @media screen and (max-width: 700px) {
   [class*="col-3"] {
     width: 300px;
@@ -45,19 +38,7 @@ body {
     width: 100px;
     display: flex;
   }
-  /* @media only screen  and(min-width:768px) and(max-width:990px){
-        #product{
-          width:100%;
-          height: 300px;
-          position: relative;
-        }
-        #off{
-          width:10px;
-          height: 300px;
-          position: relative;
-         
-        }
-      } */
+ 
 }
 #box {
   background-color: #e2e2e2;
@@ -128,10 +109,7 @@ body {
   color: #555;
   outline: none;
 }
-@font-face {
-  font-family: iranian;
-  src: url("./Fonts/A-Iranian-Sans/Iranian\ Sans.ttf");
-}
+
 
 #fields label {
   transition: all 0.3s;
@@ -348,13 +326,7 @@ nav ul li a i {
     display: grid;
   }
 
-  /* @keyframes App-logo-spin {
-        from {
-          transform: rotate(0deg);
-        }
-        to {
-          transform: rotate(360deg);
-        }} */
+
 }
 #title {
   animation: mymove 5s infinite;
