--- a/src/n.css
+++ b/src/n.css
@@ -1,17 +1,70 @@
 @font-face {
   font-family: IranSans;
   src: url("Component/Fonts/A-Iranian-Sans/Iranian\ Sans.ttf");
-  
 };
+body{
+  /* height: 100%; */
+  width: 100%;
+  margin: 0;
+}
+.vsc-initialized{
+  height: 0px;
+}
+.main{
+  /* height: 100%; */
+  /* width: 100%; */
+  background-color: black;
+}
+.home1{
+   /* margin: 0 auto; */
+   
+    background-image: url('https://i.pinimg.com/736x/57/7f/25/577f251e53663fe1029614fb08ac7152--black-wallpaper-hd-wallpaper.jpg');
+    background-repeat: no-repeat;
+    position: relative;
+    background-size:contain;
+    background-position: center;
+    background-origin:content-box;
 
 
-body {
-  /* background-color: #f6f6f6; */
-    background-color: #7a7b7c;
-
-  /* background-color: #e2e2e2; */
+}
+.bgimg {
+  /* display: block; */
+  /* width: 700px; */
+  height: 657px;
+  background-position: center;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 25px;
 }
 
+/* Position text in the top-left corner */
+.topleft {
+  position: absolute;
+  top: 0;
+  left: 16px;
+}
+
+/* Position text in the bottom-left corner */
+.bottomleft {
+  position: absolute;
+  bottom: 0;
+  left: 16px;
+}
+
+/* Position text in the middle */
+.middle {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* Style the <hr> element */
+hr {
+  margin: auto;
+  width: 40%;
+}
 
 @media screen and (max-width: 700px) {
   [class*="col-3"] {
