--- a/src/Component/product/newcolection/styles.css
+++ b/src/Component/product/newcolection/styles.css
@@ -15,15 +15,15 @@ body {
 } */
 
 .swiper {
-  width: 200px;
-  height: 600px
+  width: 100%;
+  height: 100%
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-
+background-size: contain;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -43,6 +43,6 @@ body {
   /* display: block; */
   /* position: relative; */
   width: 100%;
-  height: 700px;
+  height: 100%;
   object-fit: cover;
 }
