--- a/src/Component/product/off/styles.css
+++ b/src/Component/product/off/styles.css
@@ -1,21 +1,21 @@
 #app { height: 100% }
 html,
-body {
+/* body {
   position: relative;
   height: 100%;
-}
+} */
 
-body {
+/* body {
   background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
   margin: 0;
   padding: 0;
-}
+} */
 
 .swiper {
-  width: 100%;
+  /* width: 700px; */
   height: 100%;
 }
 
@@ -41,7 +41,7 @@ body {
 
 .swiper-slide img {
   display: block;
-  width: 100%;
+  /* width: 700px; */
   height: 100%;
   object-fit: cover;
 }
