--- a/src/n.css
+++ b/src/n.css
@@ -1,12 +1,9 @@
 @font-face {
   font-family: IranSans;
-  src: url("Component/Fonts/A-Iranian-Sans/Iranian\ Sans.ttf");
+  /* src: url("Component/Fonts/A-Iranian-Sans/Iranian\ Sans.ttf"); */
+  src: url("https://cdn.alibaba.ir/h2/desktop/assets/fonts/alibaba/alibaba-regular.woff2-5d2979c4.woff2"); 
 };
-body{
-  /* height: 100%; */
-  width: 100%;
-  margin: 0;
-}
+
 .vsc-initialized{
   height: 0px;
 }
@@ -66,33 +63,7 @@ hr {
   width: 40%;
 }
 
-@media screen and (max-width: 700px) {
-  [class*="col-3"] {
-    width: 300px;
-    position: relative;
-  }
-  [class*="col-4"] {
-    width: 60px;
-    display: flex;
-    position: relative;
-  }
-  #hambergermenu{
-    display: none;
-  }
-  #product {
-    display: grid;
-    width: 20px;
-  }
-  #backdetail {
-    display: grid;
-    width: 400px;
-  }
-  #navz {
-    width: 100px;
-    display: flex;
-  }
- 
-}
+
 #box {
   background-color: #e2e2e2;
   /* width:300px;
@@ -157,7 +128,7 @@ hr {
   align-items: center;
   padding-left: 2px;
   margin-left: 5px;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 15px;
   color: #555;
   outline: none;
@@ -216,12 +187,24 @@ hr {
   align-items: center;
   /* padding-left: 2px;
  margin-left: 5px; */
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 15px;
   color: #555;
   outline: none;
   margin-left: 90px;
   font-family: sans-serif;
+}
+.a-divider {
+  align-self: stretch;
+  min-height: 1px;
+  min-width: 1px;
+  margin: 0;
+  border: none;
+  flex: 0 1 0;
+  height: auto;
+  width: auto;
+  max-width: 100%;
+  background: var(--border-1);
 }
 #pro :hover {
   background-color: #c4c4cc;
@@ -370,17 +353,7 @@ nav ul li a i {
   margin: 0 38 px;
   transition: 0.4s all;
 }
-@media only screen and(max-width:600px) {
-  ul {
-    flex-direction: column;
-  }
- 
-  .navbar {
-    display: grid;
-  }
 
-
-}
 #title {
   animation: mymove 5s infinite;
   font-family: cursive;
@@ -412,25 +385,298 @@ input[type="radio"] {
   outline-style: none;
   outline-width: medium;
 }
-@media (max-width:858px){
-   #product{
-  /* width: 200px; */
 
-}
-#imgpro{
-  border-radius:20px;
-  width: 200px;
-  margin: 2px;
-
-}
-#textpro{
-  font-size: 25px;
-  margin-right:440px;
-  font-family: sans-serif;
-}
-}
 #imgpro{
   border-radius: 10px;
   width:780px ;
 /* }height="199px" */
+}
+.topnav {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  font-family: IranSans;
+  /* background-color: #333; */
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  /* background-color: #04AA6D; */
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+  /* .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  } */
+  .dasteBandi {
+    display: flex;
+    color: rgb(48, 47, 47);
+    font-weight: 400;
+  }
+  .container.menu1 {
+    display: flex;
+    align-items: center;
+    width: 60%;
+  }
+  .flex {
+    display: flex;
+    align-items: center;
+  }
+  .container1 > ul {
+    justify-content: space-between;
+  
+    /* padding-right: -90px; */
+  }
+  .header {
+    width: 100%;
+    /* height: 90%; */
+    /* padding: 0 14px; */
+    background-color: white;
+    min-width: 1009px;
+    max-width: 1676px;
+    margin: 0 auto;
+  }
+.hr{
+  width:220px
+}
+  * {box-sizing: border-box;}
+
+/* Style the navbar */
+.topnav {
+  overflow: hidden;
+  background-color: none;
+}
+
+/* Navbar links */
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Navbar links on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Active/current link */
+.topnav a.active {
+  /* background-color: #2196F3; */
+  color: black;
+  font-weight: bold;
+}
+
+/* Style the input container */
+.topnav .login-container {
+  float: right;
+}
+
+/* Style the input field inside the navbar */
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  width: 150px; /* adjust as needed (as long as it doesn't break the topnav) */
+}
+
+/* Style the button inside the input container */
+.topnav .login-container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .login-container button:hover {
+  background: #ccc;
+}
+
+/* Add responsiveness - On small screens, display the navbar vertically instead of horizontally */
+
+
+
+#slide_nav {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  direction: rtl;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  color: rgb(1, 1, 1);
+  font-family: helvetica;
+  font-size: 25px;
+  padding-left: 5px;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgb(236, 234, 234);
+}
+.logo1 {
+  width: 150px;
+  height: 10px;
+  justify-content: space-between;
+  padding-left: 50px;
+  /* margin-bottom: 13px; */
+}
+#slide_menu {
+  left: 30%; 
+  display: none;
+  /* align-items: center; */
+padding-right: 20px ;
+  width: 270px;
+  height: 1200px;
+  color: black;
+  background-color: white;
+  position:absolute;
+  /* box-shadow:inset 0px 0px 50px 0px #6E6E6E; */
+  z-index: 10;
+}
+#slide_menu li div{
+  /* border-bottom:1px solid #424242; */
+  display: flex;
+  align-items: center;
+  justify-content:space-evenly;
+  font-family: iranyekan;
+  font-size: 12px;
+  /* text-align; */
+}
+#slide_menu li:hover {
+  /* width:201px;
+  background-color:#2E2E2E;
+  box-shadow:inset 0px 0px 50px 0px #848484;
+  -webkit-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear;  */
+}
+#slide_menu li a {
+  height: auto;
+  line-height: 50px;
+  display: block;
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: helvetica;
+  /* padding-left: 10px; */
+}
+#slide_menu li:hover a {
+  /* padding-left:25px; */
+  /* color:white;
+  -webkit-transition: all 200ms linear;
+  -ms-transition: all 200ms linear;
+  transition: all 200ms linear; */
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+.searchboxRespansive {
+  direction: rtl;
+  display: flex;
+  align-items: center;
+  background-color: rgb(240, 240, 241);
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  width: 60%;
+  height: 44px;
+  font-size: 19px;
+  line-height: 26px;
+  font-size: 12px;
+  padding-right: 50px;
+  /* padding: 14px 45px 14px 14px; */
+}
+.login{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+#slide_search {
+  direction: rtl;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  /* line-height: 60px; */
+  color: rgb(1, 1, 1);
+  margin-right: 10px;
+  font-size: 15px;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgb(236, 234, 234);
+}
+.listNav {
+  padding-bottom: 30px;
+  color: #424750;
+}
+#slide_nav_button:focus-visible {
+  visibility: hidden;
+}
+#slide_nav_button:hover {
+  visibility: visible;
+}
+#slide_nav_button {
+  width: 100px;
+  cursor: pointer;
+}
+.flex{
+    display: flex!important;
+}
+.h-full{
+  height: 100%!important;
+}
+.items-center {
+  align-items: center!important;
+}
+.header-menu{
+  margin: 0;
+    display: flex;
+    height: 100%;
+    list-style-type: none;
+    align-items: center;
+    padding: 0;
+    color: #4b5259;
+}
+.mr-auto {
+  margin-right: auto!important;
+}
+.headerRight{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header-main{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  height: var(--header-height);
 }
